--- a/index.html
+++ b/index.html
@@ -5,6 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather app</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Righteous&family=Sniglet&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <form id="search">
+            <input type="text" placeholder="choose a city" id="chosen-city" />
+            <button type="submit" class="btn btn-primary">search</button>
+          </form>
+
+          <br />
+          <div class="row">
+            <div class="col">
+              <h1 id="heading">Isfahan</h1>
+            </div>
+            <div class="col">
+              <span class="main-temp" id="main-temp"
+                >12 <span class="units"> °C </span></span
+              >
+            </div>
+          </div>
+          <p id="time"></p>
+          <br />
+          <div class="weather-emojies">⛈</div>
+        </div>
+        <div class="col">
+          <div class="wind-speed" id="wind-speed">wind 4 km/h</div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">
+          <div class="temperature">12°C</div>
+          <br />
+          <div class="weather-emojies">⛈</div>
+        </div>
+        <div class="col">
+          <div class="temperature">14°C</div>
+          <br />
+          <div class="weather-emojies">⛈</div>
+        </div>
+        <div class="col">
+          <div class="temperature">16°C</div>
+          <br />
+          <div class="weather-emojies">🌦</div>
+        </div>
+        <div class="col">
+          <div class="temperature">15°C</div>
+          <br />
+          <div class="weather-emojies">🌥</div>
+        </div>
+        <div class="col">
+          <div class="temperature">15°C</div>
+          <br />
+          <div class="weather-emojies">🌤</div>
+        </div>
+      </div>
+    </div>
+    <script src="src/code.js"></script>
+  </body>
 </html>
