link to the github repository added at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
         </div>
       </div>
     </div>
+    <span class="credit"
+      >Created by
+      <a href="https://github.com/matintorkian/my-sheCodesPlus-project"
+        >Matin Torkian</a
+      ></span
+    >
     <script src="src/code.js"></script>
   </body>
 </html>
