humidity and weather description modified

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>
                   <span id="time"></span>
                 </li>
-                <li>clear</li>
+                <li id="description"></li>
               </ul>
               <div class="row">
                 <div class="col-md-6">
@@ -69,7 +69,7 @@
                 <li>
                   <span id="wind-speed">wind 4 km/h</span>
                 </li>
-                <li>Humidity</li>
+                <li>Humidity <span id="humidity"></span>%</li>
               </ul>
             </div>
           </div>
