added the icon API

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <div class="col-md-6">
                   <img
                     class="main-img"
-                    src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                    alt="partly_cloudy"
+                    src="http://openweathermap.org/img/wn/10d@2x.png"
+                    id="weather-icon"
+                    alt="weather-icon"
                   />
                 </div>
                 <div class="col-md-6">
