form control added to the search form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
               <div class="col">
                 <input
                   type="text"
-                  placeholder="choose a city"
+                  placeholder="choose a city..."
+                  class="form-control"
                   id="chosen-city"
                 />
               </div>
