--- a/index.html
+++ b/index.html
@@ -41,30 +41,16 @@
           </form>
 
           <br />
+
+          <h1 class="heading" id="heading">Isfahan</h1>
           <div class="row">
             <div class="col-6">
-              <h1 class="heading" id="heading">Isfahan</h1>
               <ul>
                 <li>
                   <span id="time"></span>
                 </li>
                 <li id="description"></li>
               </ul>
-              <div class="row">
-                <div class="col-md-6">
-                  <img
-                    class="main-img"
-                    src="http://openweathermap.org/img/wn/10d@2x.png"
-                    id="weather-icon"
-                    alt="weather-icon"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <span class="main-temp" id="main-temp"
-                    >12 <span class="units"> °C |°F</span></span
-                  >
-                </div>
-              </div>
             </div>
             <div class="col-6">
               <ul>
@@ -75,6 +61,24 @@
               </ul>
             </div>
           </div>
+
+          <div class="box">
+            <img
+              class="main-img"
+              class="float-left"
+              src="http://openweathermap.org/img/wn/10d@2x.png"
+              id="weather-icon"
+              alt="weather-icon"
+            />
+            <div>
+              <strong class="main-temp float-left" id="main-temp">12 </strong
+              ><span class="units">
+                <a href="#" id="celcius-link" class="active"> °C</a> |
+                <a href="#" id="farenheit-link" class="active">°F</a>
+              </span>
+            </div>
+          </div>
+          <!-- is ok -->
         </div>
         <div class="col"></div>
         <hr />
