heading capitalized and active link added to temp conversion

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div>
               <strong class="main-temp float-left" id="main-temp">12 </strong
               ><span class="units">
-                <a href="#" id="celcius-link" class="active"> °C</a> |
-                <a href="#" id="farenheit-link" class="active">°F</a>
+                <a href="#" id="celcius-link"> °C</a> |
+                <a href="#" id="farenheit-link">°F</a>
               </span>
             </div>
           </div>
