--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                     id="chosen-city"
                   />
                 </div>
-                <div class="col">
-                  <button type="submit" class="btn btn-primary">search</button>
+                <div class="col-3">
+                  <button type="submit" class="btn btn-primary w-60">
+                    search
+                  </button>
                 </div>
               </div>
             </form>
