--- a/index.html
+++ b/index.html
@@ -83,22 +83,8 @@
             </div>
             <!-- is ok -->
             <!-- now the forecast -->
-            <div class="weather-forecast">
-              <div class="row">
-                <div class="col-2">
-                  <div class="weather-forecast-date">Thu</div>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt="#"
-                    width="42"
-                  />
-                  <div class="weather-forecast-temp">
-                    <span class="weather-forecast-temp-min">12°</span>
-                    <span class="weather-forecast-temp-max">18°</span>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="weather-forecast" id="forecast"></div>
+
             <!-- the new section end -->
           </div>
         </div>
