removed the farenheit conversion option

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <br />
 
-            <h1 class="heading" id="heading">Isfahan</h1>
+            <h1 class="heading" id="heading"></h1>
             <div class="row">
               <div class="col-6">
                 <ul>
@@ -75,10 +75,7 @@
               />
               <div class="float-left">
                 <strong class="main-temp float-left" id="main-temp">12 </strong
-                ><span class="units"
-                  ><a href="#" id="celcius-link">°C</a> |
-                  <a href="#" id="farenheit-link">°F</a>
-                </span>
+                ><span class="units">°C </span>
               </div>
             </div>
             <!-- is ok -->
